# portfolio

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  requirements-dev.txt
foundations/propwatch/: .env.example  SPIKE.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
foundations/propwatch/.github/workflows/: ci.yml  daily.yml  weekly.yml
foundations/propwatch/data/: seen_ids.json
foundations/propwatch/src/propwatch/: config.py  digest.py  scraper.py  store.py
foundations/propwatch/tests/: test_config.py  test_digest.py  test_scraper.py  test_store.py
propintel/: .env.example  .gitignore  Makefile  README.md  SPIKE.md  pyproject.toml
propintel/ai/: comparables.py  db.py  prompts.py  record_builder.py  schemas.py  summary_graph.py  validators.py
propintel/analysis/: dffh_suburb_mapping_fanouts.csv  dffh_suburb_mapping_hull.py  school_crosswalk_analysis.py  school_crosswalk_candidates.csv  suburb_crosswalk_analysis.py  suburb_crosswalk_candidates.csv
propintel/api/: main.py
propintel/dbt/: .gitignore  dbt_project.yml  profiles.yml
propintel/dbt/models/: sources.yml
propintel/dbt/models/marts/: schema.yml  school_profiles.sql  school_zones_mart.sql  suburb_metrics.sql
propintel/dbt/models/staging/: schema.yml  stg_acara_school_location.sql  stg_acara_school_profile.sql  stg_auction_results.sql  stg_census.sql  stg_house_price.sql  stg_house_price_quarterly.sql  stg_house_price_series.sql  stg_metro_property_price_quarterly.sql  stg_metro_property_price_series.sql  stg_metro_sal.sql  stg_planning_overlays.sql  stg_planning_zones.sql  stg_rent.sql  stg_sal_lookup.sql  (+6 more)
propintel/dbt/seeds/: dffh_suburb_group_mapping.csv  dffh_suburb_mapping_notes.md  schema.yml  school_crosswalk_notes.md  school_name_crosswalk.csv  suburb_name_crosswalk.csv
propintel/frontend/: map.py
propintel/ingestion/: README.md  abs.py  acara_school.py  auction.py  config.py  convert.py  dffh_rent.py  fetch.py  ptv_gtfs.py  run.py  vcaa_sscai.py  vic_education.py
propintel/session-md/: FRONTEND.md  SESSION_7.md  SESSION_8_ADDENDUM.md  SESSION_8_PART_C.md  full_session_plan.md
propintel/tests/: test_abs_schema.py  test_acara_school.py  test_dffh_rent.py  test_vcaa_sscai.py
propintel/tests/ai/: test_comparables.py  test_prompts.py  test_record_builder.py  test_summary_graph.py  test_validators.py
propintel/tests/ingestion/: test_acara_school.py  test_auction.py  test_convert.py  test_ptv_gtfs.py  test_vic_education.py  test_vic_property_sales.py  test_vicmap_planning.py
(+11 files in other folders)
