[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "propintel"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "geopandas>=0.14",
    "pyarrow>=16",
    "playwright>=1.40",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "duckdb>=1.1",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydeck>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
